feat: Add Google Drive OAuth 2.0 authentication with service account fallback and update deployment configuration.

--- a/.env.example
+++ b/.env.example
@@ -25,16 +25,18 @@ BOT_PROCESS_NAME=simple_message_listener.py
 AUTO_RESTART_BOT=true
 
 # ======================
-# GOOGLE DRIVE (SERVICE ACCOUNT - RECOMMENDED)
+# GOOGLE DRIVE CONFIGURATION (OAuth 2.0 & Service Account)
 # ======================
 
 GOOGLE_DRIVE_ENABLED=true
-GOOGLE_SERVICE_ACCOUNT_FILE=service_account.json
-GOOGLE_DRIVE_FOLDER_ID=1_35WwTLrvzDQMwN_roZbIL0Wsfd6Blre
 
-# ======================
-# GOOGLE DRIVE (OAUTH2 - LEGACY)
-# ======================
-# Use only if Service Account is not available
-# GOOGLE_DRIVE_CREDENTIALS=credentials.json
-# GOOGLE_DRIVE_TOKEN=token.json
+# Option 1: OAuth 2.0 (Recommended - Desktop App)
+# Requires credentials.json (App) and token.pickle (User)
+GOOGLE_DRIVE_CREDENTIALS_FILE=credentials.json
+GOOGLE_DRIVE_TOKEN_FILE=token.pickle
+
+# Option 2: Service Account (Fallback)
+GOOGLE_SERVICE_ACCOUNT_FILE=service_account.json
+
+# Target Folder ID
+GOOGLE_DRIVE_FOLDER_ID=your_folder_id_here
