feat: Implement email notification system for Discord bot inactivity monitoring
- Added configuration options for email notifications in .env.example
- Enhanced deploy workflow to include email notification settings
- Integrated activity tracking to monitor bot activity and detect inactivity
- Created EmailNotifier class for sending email alerts and recovery notifications
- Developed InactivityMonitor class to periodically check bot activity and trigger alerts
- Added activity_tracker.py to manage and persist bot activity data
- Created inactivity_monitor.py to run as a separate process for monitoring
- Added systemd service file for inactivity monitor
- Documented email notification system in EMAIL_NOTIFICATIONS.md

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,36 @@ GOOGLE_SERVICE_ACCOUNT_FILE=service_account.json
 
 # Target Folder ID
 GOOGLE_DRIVE_FOLDER_ID=your_folder_id_here
+
+# ======================
+# EMAIL NOTIFICATION CONFIGURATION
+# ======================
+
+# SMTP Server Configuration
+# For Gmail: smtp.gmail.com (port 587)
+# For Outlook/Hotmail: smtp-mail.outlook.com (port 587)
+# For Yahoo: smtp.mail.yahoo.com (port 587)
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+
+# Email Credentials
+# For Gmail: Use App Password (not your regular password)
+# Generate at: https://myaccount.google.com/apppasswords
+SMTP_SENDER_EMAIL=your_email@gmail.com
+SMTP_SENDER_PASSWORD=your_app_password_here
+
+# Alert Recipients (comma-separated for multiple recipients)
+ALERT_RECIPIENT_EMAILS=recipient1@example.com,recipient2@example.com
+
+# ======================
+# INACTIVITY MONITORING
+# ======================
+
+# Hours of inactivity before sending alert (default: 8.0)
+INACTIVITY_THRESHOLD_HOURS=8.0
+
+# Minutes between inactivity checks (default: 30.0)
+INACTIVITY_CHECK_INTERVAL_MINUTES=30.0
+
+# Activity tracker file location
+ACTIVITY_TRACKER_FILE=./logs/bot_activity.json
